filled some stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Eventoz : Home</title>
+    <title>Billie Holiday Symposium : Home</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
     <!-- Font Awesome -->
@@ -53,7 +53,7 @@
 			      </button>
 
 			      <!-- Logo -->
-			      <a class="navbar-brand" href="index.html">Eventoz</a>
+			      <a class="navbar-brand" href="index.html">Billie Holiday Symposium</a>
 
 			    </div>
 
@@ -83,7 +83,7 @@
 						<!-- Start center Logo -->
 						<div class="mu-logo-area">
 							<!-- text based logo -->
-							<a class="mu-logo" href="#">Eventoz</a>
+							<a class="mu-logo" href="#">Billie Holiday Symposium</a>
 							<!-- image based logo -->
 							<!-- <a class="mu-logo" href="#"><img src="assets/images/logo.jpg" alt="logo img"></a> -->
 						</div>
@@ -91,9 +91,9 @@
 
 						<div class="mu-hero-featured-content">
 
-							<h1>HELLO! WELCOME TO EVENTOZ</h1>
-							<h2>The Biggest International IT Professional Conference</h2>
-							<p class="mu-event-date-line">19 - 21 February, 2018. New York, USA</p>
+							<h1>At Hunter College's Roosevelt House</h1>
+							<h2>To celebrate the artistry of Billie Holiday and the publication of <i>Bitter Crop: The Heartache and Triumph of Billie Holiday's Last Year</i>, A new book by Paul Alexander</h2>
+							<p class="mu-event-date-line">February 8, 2024</p>
 
 							<div class="mu-event-counter-area">
 								<div id="mu-event-counter">
@@ -128,12 +128,30 @@
 								</div>
 								<div class="col-md-6">
 									<div class="mu-about-right">
-										<h2>About The Conference</h2>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam aliquam distinctio magni enim error commodi suscipit nobis alias nulla, itaque ex, vitae repellat amet neque est voluptatem iure maxime eius!</p>
+										<h2>About The Symposium</h2>
+										<p>The Billie Holiday Symposium at Hunter College is funded by the college and run by a student committee. The event is led and supervised by Paul Alexander and student committee chair, Julie Rosenberg.</p>
 
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus in accusamus qui sequi nisi, sint magni, ipsam, porro nesciunt id veritatis quaerat ipsum consequatur laborum, provident veniam quibusdam placeat quam?</p>
+										<p>The students on our committee are:
+										</p>
 
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate perspiciatis magni omnis excepturi, cumque reiciendis.</p>
+										<!-- FIXME: fix formatting -->
+										<ul>
+											<li>Julie Rosenberg</li>
+											<li>Nadia Martinez</li>
+											<li>Chynna Slaughter</li>
+											<li>Sara Mahraoui</li>
+											<li>Peri Micheva</li>
+											<li>Michael Dmitrenko</li>
+											<li>Emma Tramontana</li>
+											<li>Stevie Dattomo</li>
+											<li>Hannah Busch</li>
+											<li>Kristina Xhangolli</li>
+											<li>Diana Lopez</li>
+											<li>Olivia Tymon</li>
+											<li>Mykaya Borden</li>
+										</ul>
+
+										<p><i>Bitter Crop: The Hearthache and Triumph of Billie Holiday's Last Year</i> is a new book by Paul Alexander, which is being released on February 8th. <!-- TODO: Insert blurb for Mr. A's book --> </p>
 									</div>
 								</div>
 							</div>
@@ -145,33 +163,6 @@
 			</div>
 		</section>
 		<!-- End About -->
-
-		<!-- Start Video -->
-		<section id="mu-video">
-			<div class="mu-video-overlay">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-12">
-							<div class="mu-video-area">
-								<h2>Watch Previous Event Video</h2>
-								<a class="mu-video-play-btn" href="#"><i class="fa fa-play" aria-hidden="true"></i></a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!-- Start Video content -->
-			<div class="mu-video-content">
-				<div class="mu-video-iframe-area">
-					<a class="mu-video-close-btn" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
-					<iframe width="854" height="480" src="https://www.youtube.com/embed/n9AVEl9764s" frameborder="0" allowfullscreen></iframe>
-				</div>
-			</div>
-			<!-- End Video content -->
-
-		</section>
-		<!-- End Video -->
 
 		<!-- Start Schedule  -->
 		<section id="mu-schedule">
@@ -188,9 +179,7 @@
 							<div class="mu-schedule-content-area">
 								<!-- Nav tabs -->
 								<ul class="nav nav-tabs mu-schedule-menu" role="tablist">
-								    <li role="presentation" class="active"><a href="#first-day" aria-controls="first-day" role="tab" data-toggle="tab">1 Day / 19 Feb</a></li>
-								    <li role="presentation"><a href="#second-day" aria-controls="second-day" role="tab" data-toggle="tab">2 Day / 20 Feb</a></li>
-								    <li role="presentation"><a href="#third-day" aria-controls="third-day" role="tab" data-toggle="tab">3 Day / 21 Feb</a></li>
+								    <li role="presentation" class="active"><a href="#first-day" aria-controls="first-day" role="tab" data-toggle="tab">1 Day / Feb 8</a></li>
 								    
 								</ul>
 
@@ -200,38 +189,29 @@
 								    	<ul>
 								    		<li>
 								    			<div class="mu-single-event">
-								    				<p class="mu-event-time">9.00 AM</p>
-								    				<h3>Breakfast</h3>
+								    				<p class="mu-event-time">11:30 AM to 1 PM </p>
+								    				<h3> Billie Holiday and the Legacy of “Strange Fruit” </h3>
+								    				<span>With Michael Meeropol,  David Margolick, Margo Jefferson</span>
 								    			</div>
 								    		</li>
 								    		<li>
 								    			<div class="mu-single-event">
-								    				<img src="assets/images/speaker-1.jpg" alt="event speaker">
-								    				<p class="mu-event-time">10.00 AM</p>
-								    				<h3>Advanced SVG Animations</h3>
-								    				<span>By Karl Groves</span>
+								    				<p class="mu-event-time">2:30 to 4:30 PM</p>
+								    				<h3>Billie Holiday: The Person</h3>
+								    				<span>With Ricky Riccardi, Mala Waldron, Lorraine Feather, Dan Morgenstern, Sonny Rollins</span>
 								    			</div>
 								    		</li>
 								    		<li>
 								    			<div class="mu-single-event">
-								    				<img src="assets/images/speaker-2.jpg" alt="event speaker">
-								    				<p class="mu-event-time">11.00 AM</p>
-								    				<h3>Presenting Work with Confidence</h3>
-								    				<span>By Sarah Dransner</span>
+								    				<p class="mu-event-time">5:00 to 6:00 PM </p>
+								    				<h3>Reception With Food and Drinks</h3>
 								    			</div>
 								    		</li>
 								    		<li>
 								    			<div class="mu-single-event">
-								    				<img src="assets/images/speaker-3.jpg" alt="event speaker">
-								    				<p class="mu-event-time">12.00 AM</p>
-								    				<h3>Keynote on UX & UI Design</h3>
-								    				<span>By Ned Stark</span>
-								    			</div>
-								    		</li>
-								    		<li>
-								    			<div class="mu-single-event">
-								    				<p class="mu-event-time">1.00 PM</p>
-								    				<h3>The End</h3>
+								    				<p class="mu-event-time">6 to 7:30 PM </p>
+								    				<h3>Billie Holiday: The Music </h3>
+								    				<span>Featuring musical performances by: Yolande Bavan, Lorraine Feather, Maya Days, Mala Waldron, Madeleine Peyroux</span>
 								    			</div>
 								    		</li>
 								    	</ul>
