--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
 					<div class="mu-footer-top">
 					</div>
 					<div class="mu-footer-bottom">
-						<p class="mu-copy-right">&copy; Copyright Neil Sawhney. All right reserved.</p>
+						<p class="mu-copy-right">&copy; Copyright <a href="http://Neil-sawhney.com" target="_blank">Neil Sawhney</a>. All right reserved.</p>
 					</div>
 				</div>
 			</div>
