--- a/index.html
+++ b/index.html
@@ -126,7 +126,105 @@
 								</div>
 								<div class="mu-about-right">
 									<h2>About The Symposium</h2>
-									<p>The Billie Holiday Symposium at Hunter College is funded by the college and run by a student committee. The event is led and supervised by Paul Alexander and student committee chair, Julie Rosenberg.</p>
+									<p>
+										 To celebrate the artistry of Billie Holiday and the publication of 
+
+ Bitter Crop: The Heartache and Triumph of Billie Holiday’s Last Year  
+
+a new book by Paul Alexander 
+
+Hunter College presents 
+
+ 
+
+ 
+
+The Billie Holiday Symposium at Hunter College 
+
+Roosevelt House 
+
+February 8, 2024 
+
+ 
+
+ 
+
+Billie Holiday and the Legacy of “Strange Fruit” 
+
+11:30 AM to 1 PM 
+
+ 
+
+Michael Meeropol is an economist, educator, and author. The biological son of Julius and Ethel Rosenberg, he and his brother, Robert, were adopted by Abel Meeropol, the composer of “Strange Fruit.” Over the years, Meeropol has written and lectured extensively about the importance of the song as an anthem for social reform. 
+
+ 
+
+David Margolick, a veteran journalist and frequent contributor to Vanity Fair, The New York Times Book Review, and The New York Review of Books, has published nine books, including a forthcoming biography of Sid Caesar. He is the author of Strange Fruit: The Biography of a Song, which chronicles the history and cultural relevance of the song. 
+
+ 
+
+Margo Jefferson is the author of Negroland, a memoir, which won the National Book Critics Circle Award for Autobiography, and On Michael Jackson. Her nonfiction has appeared in Newsweek, Vogue, New York, The Nation, and The New York Times, where she won the Pulitzer Prize for Criticism for her book reviews and cultural criticism. She teaches writing at Columbia University.  
+
+ 
+
+ 
+
+Billie Holiday: The Person 
+
+2:30 to 4:30 PM 
+
+ 
+
+Ricky Riccardi is the Director of Research Collections for the Louis Armstrong House Museum. He is the author of What a Wonderful World: The Magic of Louis Armstrong’s Later Years (Pantheon) and Heart Full of Rhythm: The Big Band Years of Louis Armstrong (Oxford). He won a Grammy Award for Best Liner Notes for The Complete Louis Armstrong Columbia and RCA Victor Studio Sessions 1946-1966. His talk is entitled “Louis and Billie.” 
+
+ 
+
+Mala Waldron is a singer-songwriter whose albums include Deep Resonance; Always There; Lullaby, her solo debut and tribute to her godmother, Billie Holiday; and He’s My Father. The latter was recorded with her father, Mal Waldron, the accomplished pianist and composer (“Soul Eyes”) who served as Billie Holiday’s accompanist for the last two years of her life. Waldon has performed at the Blue Note, the Jazz Standard, BAM, and Kennedy Center. 
+
+ 
+
+Lorraine Feather, also the goddaughter of Billie Holiday, is a five-time-Grammy-nominated singer and composer who has released 13 albums, among them Ages and Café Society. Her extensive work in Hollywood includes contributions to Babes in Toyland, All Dogs Go to Heaven, and Rules Don’t Apply, Warren Beatty’s last film for which she co-wrote the title track. She is the daughter of Leonard Feather, the jazz writer and presenter, who was one of Billie Holiday’s closest friends.  
+
+ 
+
+Dan Morgenstern is among jazz’s most esteemed writers. A long-time editor of Down Beat, he is the author of Jazz People and Living with Jazz. He has won eight Grammy Awards for Best Liner Notes. He is Director Emeritus of the Institute of Jazz Studies at Rutgers University. His coverage of Billie Holiday led to a friendship with her. 
+
+ 
+
+Sonny Rollins (in an interview recorded exclusively for the symposium) is one of the legendary tenor saxophonists in jazz history. Among his essential albums are Saxophone Colossus, Way Out West, The Sound of Sonny Rollins, The Bridge, Freedom Suite, and This is What I Do. His honors include three Grammys and a Grammy Lifetime Achievement Award. He was a Kennedy Center Honors recipient under President Obama. He appeared on shows with Billie Holiday during the final year of her life when they became friends. 
+
+ 
+
+ 
+
+Billie Holiday: The Music 
+
+6 to 7:30 PM 
+
+ 
+
+Featuring Musical Performances By 
+
+ 
+
+Yolande Bavan, the Sri Lankan singer and actress, famously replaced Annie Ross when she left Lambert Hendricks & Ross, jazz’s most successful trio, and the group played for three years as Lambert Hendricks & Bavan. Her film acting credits include Parting Glances, One True Thing, Cosmopolitan, and The Brave One. Billie Holiday was her friend and mentor. 
+
+ 
+
+Lorraine Feather (see above bio). 
+
+ 
+
+Maya Days starred on Broadway in Rent, Jesus Christ Superstar and Aida. In Rent, she also appeared in Los Angeles and on the West End in London. Additional theatre credits include Once Around the Sun and No Strings. As a solo artist, she has performed at Sundance, Feinstein’s, Ministry of Sound (London), 54 Below, Lincoln Center, and Carnegie Hall.  
+
+ 
+
+Mala Waldron (see above bio). 
+
+ 
+
+Madeleine Peyroux, who got her start busking on the streets of Paris, is one of the most popular jazz singer-songwriters performing today. Her albums include the bestselling Dreamland, the gold record Careless Love, The Blue Room, Secular Hymns, and Anthem. Her version of Serge Gainsbourg’s “La Javanaise” appeared in the Academy-Award-winning The Shape of Water. She tours extensively, both nationally and internationally. Peyroux counts among her influences Billie Holiday. 
+									</p>
 
 									<p>The students on our committee are:
 									</p>
