--- a/index.html
+++ b/index.html
@@ -131,33 +131,34 @@
    
    										 <h3>The Billie Holiday Symposium at Hunter College </h3>
    
-   										 Roosevelt House 
+   										 <h6>Roosevelt House</h6> 
    
    										 February 8, 2024 
-   
+										<br><br><br>
+								
    
    
    
  
- 									 	Billie Holiday and the Legacy of “Strange Fruit” 
+ 									 	Billie Holiday and the Legacy of “Strange Fruit”
  
- 									 	11:30 AM to 1 PM 
+ 									 	<br>11:30 AM to 1 PM 
 										 </center>
  
  
  
- 										<b>Michael Meeropol</b> is an economist, educator, and author. The biological son of Julius and Ethel Rosenberg, he and his brother, Robert, were adopted by Abel Meeropol, the composer of “Strange Fruit.” Over the years, Meeropol has written and lectured extensively about the importance of the song as an anthem for social reform. 
+ 										<br><b>Michael Meeropol</b> is an economist, educator, and author. The biological son of Julius and Ethel Rosenberg, he and his brother, Robert, were adopted by Abel Meeropol, the composer of “Strange Fruit.” Over the years, Meeropol has written and lectured extensively about the importance of the song as an anthem for social reform. 
  
  
  
- 										<br><br><b>David Margolick</b>, a veteran journalist and frequent contributor to Vanity Fair, The New York Times Book Review, and The New York Review of Books, has published nine books, including a forthcoming biography of Sid Caesar. He is the author of Strange Fruit: The Biography of a Song, which chronicles the history and cultural relevance of the song. 
+ 										<br><br><b>David Margolick</b>, a veteran journalist and frequent contributor to <i>Vanity Fair</i>, <i>The New York Times Book Review</i>, and The New York Review of Books, has published nine books, including a forthcoming biography of Sid Caesar. He is the author of <i>Strange Fruit: The Biography of a Song</i>, which chronicles the history and cultural relevance of the song. 
 
 
 
-										Margo Jefferson is the author of Negroland, a memoir, which won the National Book Critics Circle Award for Autobiography, and On Michael Jackson. Her nonfiction has appeared in Newsweek, Vogue, New York, The Nation, and The New York Times, where she won the Pulitzer Prize for Criticism for her book reviews and cultural criticism. She teaches writing at Columbia University.  
+										<br><br><b>Margo Jefferson</b> is the author of <i>Negroland</i>, a memoir, which won the National Book Critics Circle Award for Autobiography, and On Michael Jackson. Her nonfiction has appeared in <i>Newsweek</i>, <i>Vogue</i>, <i>New York</i>, <i>The Nation</i>, and <i>The New York Times</i>, where she won the Pulitzer Prize for Criticism for her book reviews and cultural criticism. She teaches writing at Columbia University.  
 
 
-										<br><br><br>
+										<br><br>
 
 
 										<center>Billie Holiday: The Person <br>
@@ -166,57 +167,60 @@
 
 										<br>
 
-										Ricky Riccardi is the Director of Research Collections for the Louis Armstrong House Museum. He is the author of What a Wonderful World: The Magic of Louis Armstrong’s Later Years (Pantheon) and Heart Full of Rhythm: The Big Band Years of Louis Armstrong (Oxford). He won a Grammy Award for Best Liner Notes for The Complete Louis Armstrong Columbia and RCA Victor Studio Sessions 1946-1966. His talk is entitled “Louis and Billie.” 
+										<b>Ricky Riccardi</b> is the Director of Research Collections for the Louis Armstrong House Museum. He is the author of <i>What a Wonderful World: The Magic of Louis Armstrong’s Later Years</i> (Pantheon) and <i>Heart Full of Rhythm: The Big Band Years of Louis Armstrong</i> (Oxford). He won a Grammy Award for Best Liner Notes for <i>The Complete Louis Armstrong Columbia and RCA Victor Studio Sessions 1946-1966.</i> His talk is entitled “Louis and Billie.” 
 
 
 
-										Mala Waldron is a singer-songwriter whose albums include Deep Resonance; Always There; Lullaby, her solo debut and tribute to her godmother, Billie Holiday; and He’s My Father. The latter was recorded with her father, Mal Waldron, the accomplished pianist and composer (“Soul Eyes”) who served as Billie Holiday’s accompanist for the last two years of her life. Waldon has performed at the Blue Note, the Jazz Standard, BAM, and Kennedy Center. 
+										<br><br><b>Mala Waldron</b> is a singer-songwriter whose albums include <i>Deep Resonance; Always There; Lullaby,</i> her solo debut and tribute to her godmother, Billie Holiday; and <i>He’s My Father.</i> The latter was recorded with her father, Mal Waldron, the accomplished pianist and composer (“Soul Eyes”) who served as Billie Holiday’s accompanist for the last two years of her life. Waldon has performed at the Blue Note, the Jazz Standard, BAM, and Kennedy Center. 
 
 
 
-										Lorraine Feather, also the goddaughter of Billie Holiday, is a five-time-Grammy-nominated singer and composer who has released 13 albums, among them Ages and Café Society. Her extensive work in Hollywood includes contributions to Babes in Toyland, All Dogs Go to Heaven, and Rules Don’t Apply, Warren Beatty’s last film for which she co-wrote the title track. She is the daughter of Leonard Feather, the jazz writer and presenter, who was one of Billie Holiday’s closest friends.  
+										<br><br><b>Lorraine Feather</b>, also the goddaughter of Billie Holiday, is a five-time-Grammy-nominated singer and composer who has released 13 albums, among them <i>Ages and Café Society.</i> Her extensive work in Hollywood includes contributions to <i>Babes in Toyland, All Dogs Go to Heaven,</i> and <i>Rules Don’t Apply</i>, Warren Beatty’s last film for which she co-wrote the title track. She is the daughter of Leonard Feather, the jazz writer and presenter, who was one of Billie Holiday’s closest friends.  
 
 
 
-										Dan Morgenstern is among jazz’s most esteemed writers. A long-time editor of Down Beat, he is the author of Jazz People and Living with Jazz. He has won eight Grammy Awards for Best Liner Notes. He is Director Emeritus of the Institute of Jazz Studies at Rutgers University. His coverage of Billie Holiday led to a friendship with her. 
+										<br><br><b>Dan Morgenstern</b> is among jazz’s most esteemed writers. A long-time editor of <i>Down Beat</i>, he is the author of <i>Jazz People</i> and <i>Living with Jazz.</i> He has won eight Grammy Awards for Best Liner Notes. He is Director Emeritus of the Institute of Jazz Studies at Rutgers University. His coverage of Billie Holiday led to a friendship with her. 
 
 
 
-										Sonny Rollins (in an interview recorded exclusively for the symposium) is one of the legendary tenor saxophonists in jazz history. Among his essential albums are Saxophone Colossus, Way Out West, The Sound of Sonny Rollins, The Bridge, Freedom Suite, and This is What I Do. His honors include three Grammys and a Grammy Lifetime Achievement Award. He was a Kennedy Center Honors recipient under President Obama. He appeared on shows with Billie Holiday during the final year of her life when they became friends. 
+										<br><br><b>Sonny Rollins</b> (in an interview recorded exclusively for the symposium) is one of the legendary tenor saxophonists in jazz history. Among his essential albums are <i>Saxophone Colossus, Way Out West, The Sound of Sonny Rollins, The Bridge, Freedom Suite,</i> and <i>This is What I Do.</i> His honors include three Grammys and a Grammy Lifetime Achievement Award. He was a Kennedy Center Honors recipient under President Obama. He appeared on shows with Billie Holiday during the final year of her life when they became friends. 
 
 
 
 
 
-										Billie Holiday: The Music 
+										<center><br><br>Billie Holiday: The Music 
 
-										6 to 7:30 PM 
-
-
-
-										Featuring Musical Performances By 
+										<br>6 to 7:30 PM 
 
 
 
-										Yolande Bavan, the Sri Lankan singer and actress, famously replaced Annie Ross when she left Lambert Hendricks & Ross, jazz’s most successful trio, and the group played for three years as Lambert Hendricks & Bavan. Her film acting credits include Parting Glances, One True Thing, Cosmopolitan, and The Brave One. Billie Holiday was her friend and mentor. 
+										<br><br>Featuring Musical Performances By</center>
 
 
 
-										Lorraine Feather (see above bio). 
+										
+<br><b>Yolande Bavan</b>, the Sri Lankan singer and actress, famously replaced Annie Ross when she left Lambert Hendricks & Ross, jazz’s most successful trio, and the group played for three years as Lambert Hendricks & Bavan. Her film acting credits include <i>Parting Glances, One True Thing, Cosmopolitan,</i> and <i>The Brave One.</i> Billie Holiday was her friend and mentor. 
 
 
 
-										Maya Days starred on Broadway in Rent, Jesus Christ Superstar and Aida. In Rent, she also appeared in Los Angeles and on the West End in London. Additional theatre credits include Once Around the Sun and No Strings. As a solo artist, she has performed at Sundance, Feinstein’s, Ministry of Sound (London), 54 Below, Lincoln Center, and Carnegie Hall.  
+										<br><br><b>Lorraine Feather</b> (see above bio). 
 
 
 
-										Mala Waldron (see above bio). 
+										<br><br><b>Maya Days</b> starred on Broadway in <i>Rent, Jesus Christ Superstar</i> and <i>Aida.</i> In <i>Rent,</i> she also appeared in Los Angeles and on the West End in London. Additional theatre credits include <i>Once Around the Sun</i> and <i>No Strings.</i> As a solo artist, she has performed at Sundance, Feinstein’s, Ministry of Sound (London), 54 Below, Lincoln Center, and Carnegie Hall.  
 
 
 
-										Madeleine Peyroux, who got her start busking on the streets of Paris, is one of the most popular jazz singer-songwriters performing today. Her albums include the bestselling Dreamland, the gold record Careless Love, The Blue Room, Secular Hymns, and Anthem. Her version of Serge Gainsbourg’s “La Javanaise” appeared in the Academy-Award-winning The Shape of Water. She tours extensively, both nationally and internationally. Peyroux counts among her influences Billie Holiday. 
+										<br><br><b>Mala Waldron (see above bio).</b> 
 
-									<p>The students on our committee are:
+
+
+										<br><br><b>Madeleine Peyroux,</b> who got her start busking on the streets of Paris, is one of the most popular jazz singer-songwriters performing today. Her albums include the bestselling <i>Dreamland,</i> the gold record <i>Careless Love, The Blue Room, Secular Hymns,</i> and <i>Anthem.</i> Her version of Serge Gainsbourg’s “La Javanaise” appeared in the Academy-Award-winning <i>The Shape of Water.</i> She tours extensively, both nationally and internationally. Peyroux counts among her influences Billie Holiday. <br><br><br>
+										<center>Harold Holzer, Roosevelt House Director
+										<br> Paul Alexander, Symposium Director
+										<br> Julie Rosenberg, Student Committee Chair</center>
+										<br><br><p><b>The students on our committee are:</b>
 									</p>
 
 									<!-- FIXME: fix formatting -->
@@ -237,7 +241,7 @@
 										<li>Neil Sawhney</li>
 									</ul>
 
-									<p><i>Bitter Crop: The Hearthache and Triumph of Billie Holiday's Last Year</i> is a new book by Paul Alexander, which is being released on February 8th. <!-- TODO: Insert blurb for Mr. A's book --> Copies will be for sale at the event.</p>
+									<br><center><p><i>Bitter Crop: The Hearthache and Triumph of Billie Holiday's Last Year</i> is a new book by Paul Alexander, which is being released on February 8th. <!-- TODO: Insert blurb for Mr. A's book --> Copies will be for sale at the event.</p></center>
 								</div>
 							<!-- End Feature Content -->
 						</div>
