--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 <br>—Catherine Russell, Grammy Award-winning jazz artist<center/>
 
 <br><center>“Sensitive, searing, and unforgettable as Lady Day herself, Bitter Crop is an exquisite testament that offers breathtaking insight into Holiday’s final year. Alexander’s tour de force transcends the mythology of Holiday’s wounds and bruises to recognize her pure voice and heart, reminding us that Billie Holiday is with us yet.”
-<br>––Rachel Eliza Griffiths, author of Promise<center/>
+<br>—Rachel Eliza Griffiths, author of Promise<center/>
 
 <br><center>“A nonfiction portrait of Billie Holiday that reads like a novel, Bitter Crop takes you into the rooms where she lived and the venues where she performed to give you a revealing, up-close look at a musical genius who became an American icon. A brilliant achievement!”
 <br>—Don Winslow, New York Times best-selling author of City of Dreams<center/>
@@ -412,7 +412,6 @@
 			</div>
 		</section>
 		<!-- End Speakers -->
-
 		<!-- Start Venue -->
 		<section id="mu-venue">
 			<div class="mu-venue-area">
