reorg, alphabetize, shuffle

--- a/index.html
+++ b/index.html
@@ -385,6 +385,26 @@
 																</div>
 															</div>
 															<!-- End single speaker -->
+															<!-- Start single speaker -->
+															<div class="mu-single-speakers">
+																<div class="mu-single-speakers-img">
+																</div>
+																<div class="mu-single-speakers-info">
+																	<h3>Lorraine Feather</h3>
+																	<p>(see above bio)</p>
+																</div>
+															</div>
+															<!-- End single speaker -->
+															<!-- Start single speaker -->
+															<div class="mu-single-speakers">
+																<div class="mu-single-speakers-img">
+																</div>
+																<div class="mu-single-speakers-info">
+																	<h3>Mala Waldron</h3>
+																	<p>(see above bio)</p>
+																</div>
+															</div>
+															<!-- End single speaker -->
 
 														</div>
 
@@ -405,20 +425,20 @@
 
 										<h5>The students on our committee are:</h5>
 
-										Julie Rosenberg<br>
-										Nadia Martinez<br>
-										Chynna Slaughter<br>
-										Sara Mahraoui<br>
-										Peri Micheva<br>
-										Michael Dmitrenko<br>
-										Emma Tramontana<br>
-										Stevie Dattomo<br>
-										Hannah Busch<br>
-										Kristina Xhangolli<br>
-										Diana Lopez<br>
-										Olivia Tymon<br>
-										Mykaya Borden<br>
-										Neil Sawhney</p>
+										Chynna Slaughter <br>
+										Diana Lopez <br>
+										Emma Tramontana <br>
+										Hannah Busch <br>
+										Julie Rosenberg <br>
+										Kristina Xhangolli <br>
+										Michael Dmitrenko <br>
+										Mykaya Borden <br>
+										Nadia Martinez <br>
+										Neil Sawhney <br>
+										Olivia Tymon <br>
+										Peri Micheva <br>
+										Sara Mahraoui <br>
+										Stevie Dattomo <br>
 
 										<br>
 										<i>Bitter Crop: The Hearthache and Triumph of Billie Holiday's Last Year</i>, a
@@ -427,7 +447,7 @@
 										the event.
 
 										<br><br>
-										<h5>Advance Praise:</h5>
+										<h6>Advance Praise:</h6>
 									</center>
 
 									<blockquote style="font-style: italic; text-align: center; color: #000000;">
@@ -467,39 +487,6 @@
 										<br><span style="color:rgb(73, 73, 73); display: block; margin-top:10px;">
 											—Sandra Cisneros, best-selling author of
 											Woman Without Shame
-										</span>
-									</blockquote>
-
-									<blockquote style="font-style: italic; text-align: center; color: #000000;">
-										"Paul Alexander brought me right into the room with Billie Holiday.
-										Despite all of her challenges, she remained determined to do what she
-										absolutely had to do — sing! The book is filled with the irony of life —
-										humor, sadness, and everything in between. A truly deep and inspiring
-										work!"
-										<br><span style="color:rgb(73, 73, 73); display: block; margin-top:10px;">
-											—Catherine Russell, Grammy Award-winning jazz artist
-										</span>
-									</blockquote>
-
-									<blockquote style="font-style: italic; text-align: center; color: #000000;">
-										“Sensitive, searing, and unforgettable as Lady Day herself, Bitter
-										Crop is an exquisite testament that offers breathtaking insight into
-										Holiday’s final year. Alexander’s tour de force transcends the mythology of
-										Holiday’s wounds and bruises to recognize her pure voice and heart, reminding us
-										that Billie Holiday is with us yet.”
-										<br><span style="color:rgb(73, 73, 73); display: block; margin-top:10px;">
-											—Rachel Eliza Griffiths, author of Promise
-										</span>
-									</blockquote>
-
-									<blockquote style="font-style: italic; text-align: center; color: #000000;">
-										“A nonfiction portrait of Billie Holiday that reads like a novel, Bitter Crop
-										takes you into the rooms where she lived and the venues where she performed to
-										give you a revealing, up-close look at a musical genius who became an American
-										icon. A brilliant achievement!”
-										<br><span style="color:rgb(73, 73, 73); display: block; margin-top:10px;>">
-											—Don Winslow, New York Times best-selling author of City of
-											Dreams
 										</span>
 									</blockquote>
 
@@ -582,7 +569,6 @@
 									<button type="submit" id="email-jules" class="mu-reg-email-btn">Julie
 										Rosenberg</button>
 								</center>
-								<!-- TODO: fix link -->
 								<script>
 									document.getElementById("email-jules").onclick = function () {
 										window.open("mailto:jules.e.r@outlook.com", "_blank");
@@ -592,7 +578,6 @@
 									<button type="submit" id="email-alex" class="mu-reg-email-btn">Paul
 										Alexander</button>
 								</center>
-								<!-- TODO: fix link -->
 								<script>
 									document.getElementById("email-alex").onclick = function () {
 										window.open("mailto:pa757@hunter.cuny.edu", "_blank");
