fun changes changes with Mr.A

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Michael Meeropol </h3>
-																	<p>An economist, educator, and author. The
+																	<p>He is an economist, educator, and author. The
 																		biological son of Julius and Ethel
 																		Rosenberg, he and his brother, Robert, were
 																		adopted by Abel Meeropol, the composer of
@@ -174,7 +174,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>David Margolick</h3>
-																	<p>A veteran journalist and frequent contributor
+																	<p>He is a veteran journalist and frequent contributor
 																		to Vanity Fair, The New York Times Book
 																		Review, and The New York Review of Books,
 																		has published nine books, including a
@@ -193,7 +193,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Margo Jefferson </h3>
-																	<p>The author of two memoires, Constructing a
+																	<p>She is the author of two memoires, Constructing a
 																		Nervous System and Negroland, which won the
 																		National Book Critics Circle Award for
 																		Autobiography, and On Michael Jackson. Her
@@ -218,7 +218,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Ricky Riccardi </h3>
-																	<p>The Director of Research Collections for the
+																	<p>He is the Director of Research Collections for the
 																		Louis Armstrong House Museum. He is the
 																		author of What a Wonderful World: The Magic
 																		of Louis Armstrong’s Later Years (Pantheon)
@@ -239,7 +239,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Mala Waldron </h3>
-																	<p>A singer-songwriter whose albums include Deep
+																	<p>She is a singer-songwriter whose albums include Deep
 																		Resonance; Always There; Lullaby, her solo
 																		debut and tribute to her godmother, Billie
 																		Holiday; and He’s My Father. The latter was
@@ -261,7 +261,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Lorraine Feather</h3>
-																	<p>The goddaughter of Billie Holiday, is a
+																	<p>The goddaughter of Billie Holiday, she is a
 																		three-time Grammy-nominated lyricist and
 																		singer who has released 13 albums, among
 																		them Ages and Café Society. Her work in film
@@ -285,7 +285,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Dan Morgenstern </h3>
-																	<p>Among jazz’s most esteemed writers. A
+																	<p>He is among jazz’s most esteemed writers. A
 																		long-time editor of Down Beat, he is the
 																		author of Jazz People and Living with Jazz.
 																		He has won eight Grammy Awards for Best
@@ -304,8 +304,8 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Sonny Rollins </h3>
-																	<p>(in an interview recorded exclusively for the
-																		symposium) Is one of the legendary tenor
+																	<p><br>(in an interview recorded exclusively for the
+																		symposium) <br> He is one of the legendary tenor
 																		saxophonists in jazz history. Among his
 																		essential albums are Saxophone Colossus, Way
 																		Out West, The Sound of Sonny Rollins, The
@@ -331,7 +331,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Yolande Bavan</h3>
-																	<p>The Sri Lankan singer and actress, famously
+																	<p>The Sri Lankan singer and actress famously
 																		replaced Annie Ross when she left Lambert
 																		Hendricks & Ross, jazz’s most successful
 																		trio, and the group played for three years
@@ -360,7 +360,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Maya Days </h3>
-																	<p>Starred on Broadway in Rent, Jesus Christ
+																	<p>She starred on Broadway in Rent, Jesus Christ
 																		Superstar and Aida. In Rent, she also
 																		appeared in Los Angeles and on the West End
 																		in London. Additional theatre credits
@@ -390,7 +390,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Madeleine Peyroux</h3>
-																	<p>Got her start busking on the streets of
+																	<p>The singer, who got her start busking on the streets of
 																		Paris, is one of the most popular jazz
 																		singer-songwriters performing today. Her
 																		albums include the bestselling Dreamland,
@@ -400,7 +400,7 @@
 																		appeared in the Academy Award-winning The
 																		Shape of Water. She tours extensively, both
 																		nationally and internationally. Peyroux
-																		counts among her influences Billie Holiday.
+																		counts among her influences Billie Holiday. <br><br>
 																	</p>
 																</div>
 															</div>
@@ -438,7 +438,7 @@
 										Chynna Slaughter <br>
 										Emma Tramontana <br>
 										Olivia Tymon <br>
-										Kristina Xhangolli <br>
+										Kristina Xhangolli <br><br><br>
 
 										<br>
 										<i>Bitter Crop: The Hearthache and Triumph of Billie Holiday's Last Year</i>, a
