--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 																</div>
 																<div class="mu-single-speakers-info">
 																	<h3>Margo Jefferson </h3>
-																	<p>She is the author of two memoires, Constructing a
+																	<p>She is the author of two memoirs, Constructing a
 																		Nervous System and Negroland, which won the
 																		National Book Critics Circle Award for
 																		Autobiography, and On Michael Jackson. Her
@@ -303,8 +303,8 @@
 																		alt="speaker img">
 																</div>
 																<div class="mu-single-speakers-info">
-																	<h3>Sonny Rollins </h3>
-																	<p><br>(in an interview recorded exclusively for the
+																	<h3>Sonny Rollins</h3>
+																	<p>(in an interview recorded exclusively for the
 																		symposium) <br> He is one of the legendary tenor
 																		saxophonists in jazz history. Among his
 																		essential albums are Saxophone Colossus, Way
@@ -400,7 +400,7 @@
 																		appeared in the Academy Award-winning The
 																		Shape of Water. She tours extensively, both
 																		nationally and internationally. Peyroux
-																		counts among her influences Billie Holiday. <br><br>
+																		counts among her influences Billie Holiday. <br><br><br><br>
 																	</p>
 																</div>
 															</div>
@@ -428,12 +428,12 @@
 										Mykaya Borden <br>
 										Hannah Busch <br>
 										Stevie Dattomo <br>
-										Michael Dmitrenko <br>
+										Michelle Dmitrenko <br>
 										Diana Lopez <br>
 										Sara Mahraoui <br>
 										Nadia Martinez <br>
 										Peri Micheva <br>
-										Julie Rosenberg <br>
+										Julie Rosenberg <p>Chair<p> <br>
 										Neil Sawhney <br>
 										Chynna Slaughter <br>
 										Emma Tramontana <br>
