--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 																		appeared in the Academy Award-winning The
 																		Shape of Water. She tours extensively, both
 																		nationally and internationally. Peyroux
-																		counts among her influences Billie Holiday. <br><br><br><br>
+																		counts among her influences Billie Holiday. <br><br><br><br><br>
 																	</p>
 																</div>
 															</div>
@@ -433,7 +433,7 @@
 										Sara Mahraoui <br>
 										Nadia Martinez <br>
 										Peri Micheva <br>
-										Julie Rosenberg <p>Chair<p> <br>
+										Julie Rosenberg (Chair) <br>
 										Neil Sawhney <br>
 										Chynna Slaughter <br>
 										Emma Tramontana <br>
@@ -542,7 +542,7 @@
 								<!-- TODO: fix link -->
 								<script>
 									document.getElementById("register").onclick = function () {
-										window.open("https://www.google.com", "_blank");
+										window.open("https://www.roosevelthouse.hunter.cuny.edu/", "_blank");
 									};
 								</script>
 
